# warhammer-roster-api

./: Cargo.toml
data/: tyranids.json
data/tyranids/: enhancement-points.json  tyranids.json  unit-points.json
src/: main.rs
