[package]
name = "warhammer-roster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = {version = "1.35.1", features = ["fs"]}
